# structured_binary_paraser

./: CMakeLists.txt  LICENSE  README.md  ast.h  bitfield.h  meta.h  rete.h  rule.re  rule_ast.h  rule_grammar.y  sbp.re  sbp_grammar.y  scanner.h
test/: sample_schema_file
